--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Hello World</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dear Paradox ❤️</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello World ❤️</h1>
-  <p>This site is hosted using GitHub Pages.</p>
+  <div class="card">
+    <h1>Dear Paradox,</h1>
+
+    <p class="question">
+      Will you be my Valentine?
+    </p>
+
+    <p class="from">
+      — Bharat ❤️
+    </p>
+
+    <div class="buttons">
+      <button id="yesBtn">Yes 💖</button>
+      <button id="noBtn">I refuse 😤</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
