--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dear Paradox ❤️</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dear Paradox 💙</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <div class="card">
     <h1>Dear Paradox,</h1>
 
@@ -15,14 +16,16 @@
     </p>
 
     <p class="from">
-      — Bharat ❤️
+      — Bharat 💙
     </p>
 
     <div class="buttons">
-      <button id="yesBtn">Yes 💖</button>
-      <button id="noBtn">I refuse 😤</button>
+      <button id="yesBtn">Yes 💙</button>
     </div>
   </div>
+
+  <!-- Floating NO button -->
+  <button id="noBtn">I refuse 😤</button>
 
   <script src="script.js"></script>
 </body>
