--- a/yes.html
+++ b/yes.html
@@ -2,30 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Valentine ❤️</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Valentine 💙</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <div class="card">
     <h1>My Valentine,</h1>
 
     <p class="message">
-      Thank you for saying yes.  
-      Your response has been recorded, acknowledged, and stored safely in my heart.
+      Thank you for saying yes.
       <br><br>
-      Now just wait — and be prepared for a Valentine’s Day
-      that’s thoughtfully planned, slightly nerdy,
-      and completely about you.
+      Your response has been safely received, processed,
+      and permanently stored where it matters most.
+      <br><br>
+      Please wait and be prepared for
+      something thoughtful, intentional,
+      and slightly nerdy.
     </p>
 
     <p class="from">
-      — Yours, Bharat ❤️
+      — Yours, Bharat 💙
     </p>
   </div>
 
   <audio id="music" autoplay>
-    <source src="music.mp3" type="audio/mpeg">
+    <source src="music.mp3" type="audio/mpeg" />
   </audio>
+
 </body>
 </html>
