--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+  <!-- Floating hearts container -->
+  <div id="hearts"></div>
+
   <div class="card">
     <h1>Dear Paradox,</h1>
 
@@ -24,7 +27,6 @@
     </div>
   </div>
 
-  <!-- Floating NO button -->
   <button id="noBtn">I refuse 😤</button>
 
   <script src="script.js"></script>
