--- a/yes.html
+++ b/yes.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <div id="hearts"></div>
+
   <div class="card">
     <h1>My Valentine,</h1>
 
@@ -15,11 +17,10 @@
       Thank you for saying yes.
       <br><br>
       Your response has been safely received, processed,
-      and permanently stored where it matters most.
+      and stored with care.
       <br><br>
-      Please wait and be prepared for
-      something thoughtful, intentional,
-      and slightly nerdy.
+      Please wait and be prepared for something
+      thoughtful, intentional, and a little nerdy.
     </p>
 
     <p class="from">
