--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dear Paradox 💙</title>
+  <title>Dear Paradox ❤️</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- Floating hearts container -->
   <div id="hearts"></div>
 
   <div class="card">
@@ -19,11 +18,11 @@
     </p>
 
     <p class="from">
-      — Bharat 💙
+      — Bharat ❤️
     </p>
 
     <div class="buttons">
-      <button id="yesBtn">Yes 💙</button>
+      <button id="yesBtn">Yes ❤️</button>
     </div>
   </div>
 
