--- a/yes.html
+++ b/yes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Valentine 💙</title>
+  <title>My Valentine ❤️</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -16,15 +16,15 @@
     <p class="message">
       Thank you for saying yes.
       <br><br>
-      Your response has been safely received, processed,
-      and stored with care.
+      Your response has been safely received,
+      acknowledged, and handled with care.
       <br><br>
-      Please wait and be prepared for something
-      thoughtful, intentional, and a little nerdy.
+      Please stand by.
+      Something thoughtful is loading.
     </p>
 
     <p class="from">
-      — Yours, Bharat 💙
+      — Yours, Bharat ❤️
     </p>
   </div>
 
@@ -32,5 +32,6 @@
     <source src="music.mp3" type="audio/mpeg" />
   </audio>
 
+  <script src="script.js"></script>
 </body>
 </html>
