--- a/yes.html
+++ b/yes.html
@@ -13,14 +13,8 @@
   <div class="card">
     <h1>My Valentine,</h1>
 
-    <p class="message">
-      Thank you for saying yes.
-      <br><br>
-      Your response has been safely received,
-      acknowledged, and handled with care.
-      <br><br>
-      Please stand by.
-      Something thoughtful is loading.
+    <p class="message" id="valentineMessage">
+      <!-- Message injected by JS -->
     </p>
 
     <p class="from">
