--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <div id="hearts"></div>
+  <div id="particles"></div>
 
   <div class="card">
     <h1>Dear Paradox,</h1>
@@ -27,6 +28,10 @@
   </div>
 
   <button id="noBtn">I refuse 😤</button>
+
+  <div id="countdown" class="hidden">
+    Preparing something special<span id="dots">.</span>
+  </div>
 
   <script src="script.js"></script>
 </body>
