--- a/yes.html
+++ b/yes.html
@@ -13,16 +13,14 @@
   <div class="card">
     <h1>My Valentine,</h1>
 
-    <p class="message" id="valentineMessage">
-      <!-- Message injected by JS -->
-    </p>
+    <p class="message" id="valentineMessage"></p>
 
     <p class="from">
       — Yours, Bharat ❤️
     </p>
   </div>
 
-  <audio id="music" autoplay>
+  <audio id="music" preload="auto">
     <source src="music.mp3" type="audio/mpeg" />
   </audio>
 
