--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
   <button id="noBtn">I refuse 😤</button>
 
-  <div id="countdown" class="hidden">
+  <!-- Centered countdown overlay -->
+  <div id="countdown" class="countdown hidden">
     Preparing something special<span id="dots">.</span>
   </div>
 
