--- a/index.html
+++ b/index.html
@@ -3,35 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dear Paradox ❤️</title>
+  <title>Dear Paradox</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <div id="hearts"></div>
-  <div id="particles"></div>
-
   <div class="card">
-    <h1>Dear Paradox,</h1>
+    <h1>Dear Paradox</h1>
 
-    <p class="question">
+    <p class="message">
       Will you be my Valentine?
     </p>
 
     <p class="from">
-      — Bharat ❤️
+      — Bharat <span class="heart">❤️</span>
     </p>
 
     <div class="buttons">
-      <button id="yesBtn">Yes ❤️</button>
+      <button id="yesBtn">Yes</button>
+      <button id="noBtn">I refuse 😌</button>
     </div>
-  </div>
 
-  <button id="noBtn">I refuse 😤</button>
-
-  <!-- Centered countdown overlay -->
-  <div id="countdown" class="countdown hidden">
-    Preparing something special<span id="dots">.</span>
+    <div class="countdown" id="countdown"></div>
   </div>
 
   <script src="script.js"></script>
