--- a/yes.html
+++ b/yes.html
@@ -3,25 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Valentine ❤️</title>
+  <title>My Valentine</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <div id="hearts"></div>
+  <div class="card" id="valentineMessage">
+    <h1>My Valentine</h1>
 
-  <div class="card">
-    <h1>My Valentine,</h1>
-
-    <p class="message" id="valentineMessage"></p>
+    <p class="message" id="dynamicMessage"></p>
 
     <p class="from">
-      — Yours, Bharat ❤️
+      — Bharat <span class="heart">❤️</span>
     </p>
   </div>
 
-  <audio id="music" preload="auto">
-    <source src="music.mp3" type="audio/mpeg" />
+  <audio id="music">
+    <source src="music.mp3" type="audio/mpeg">
   </audio>
 
   <script src="script.js"></script>
