--- a/index.html
+++ b/index.html
@@ -3,28 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dear Paradox</title>
+  <title>Dear Paradox ❤️</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <div class="card">
-    <h1>Dear Paradox</h1>
+  <div id="hearts"></div>
+  <div id="particles"></div>
 
-    <p class="message">
+  <div class="card">
+    <h1>Dear Paradox,</h1>
+
+    <p class="question">
       Will you be my Valentine?
     </p>
 
     <p class="from">
-      — Bharat <span class="heart">❤️</span>
+      — Bharat ❤️
     </p>
 
     <div class="buttons">
-      <button id="yesBtn">Yes</button>
-      <button id="noBtn">I refuse 😌</button>
+      <button id="yesBtn">Yes ❤️</button>
     </div>
+  </div>
 
-    <div class="countdown" id="countdown"></div>
+  <button id="noBtn">I refuse 😤</button>
+
+  <div id="countdown" class="hidden">
+    Preparing something special<span id="dots">.</span>
   </div>
 
   <script src="script.js"></script>
